src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteVariableName.xq
module namespace IncompleteVariableName = "IncompleteVariableName";

declare variable $IncompleteVariableName: := ();
